set up contact, home, about, and content framework

--- a/about.html
+++ b/about.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>About</title>
 </head>
 <body>
-    
+    <header>
+    <h1 class="nonMainHeading">Thomas Manning</h1>
+    <nav>
+        <ul class="nav-bar">
+            <li><a class="otherPage" href="index.html">Home</a></li>
+            <li><a class="currentPage" href="about.html">About</a></li>
+            <li><a class="otherPage" href="contact.html">Contact</a></li>
+            <li><a class="otherPage" href="content.html">Content</a></li>
+        </ul>
+    </nav>
+    </header>
+        <h3>About Thomas</h3>
+    <section class="aboutMessage">
+        <div class="aboutText">
+        <p id="m1">Thomas Manning is a Senior at Michigan State University studying Information Science. Raised in southeast Michigan, he has been working with computers 
+            since adolescence. As a student, Thomas' main focuses are on UX design and research on artificial inteligence and machine learning.
+        </p>
+        <p id="m2">
+            Thomas has been producing a variety of art since he was younger. Originally releasing low quality videos to YouTube, he shifted his focus to music after 
+            becoming a musician in high school. Throughout college he began designing t-shirts, releasing more videos, and creating websites. He has plans to begin work
+            on smaller video game projects.
+        </p>
+        <p id="m3">
+            Thomas has been involved in a variety of activities throughout his career. His main interest is competitive gaming, primarily the Super Smash Bros.
+            series, in which he hosts events, tracks statistics, and competes. He is also an avid musician, playing several instruments including the saxophone and guitar.
+            He hopes to one day compete on Jeopardy, having tried out once before.  
+        </p> 
+        </div>
+        <img src="me2.jpg" class="imageMe2" alt="An image of Thomas Manning in front of a barn">
+    </section>
 </body>
 </html>
