--- a/content.html
+++ b/content.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Content</title>
 </head>
 <body>
-    
+    <header>
+    <h1 class="nonMainHeading">Thomas Manning</h1>
+    <nav>
+        <ul class="nav-bar">
+            <li><a class="otherPage" href="index.html">Home</a></li>
+            <li><a class="otherPage" href="about.html">About</a></li>
+            <li><a class="otherPage" href="contact.html">Contact</a></li>
+            <li><a class="currentPage" href="content.html">Content</a></li>
+        </ul>
+    </nav>
+    </header>
+    <section>
+        <h3>Thomas' Content</h3>
+        <a href="videos.html">
+            <button class="contentButton">
+                Videos
+            </button>
+        </a>
+        <a href="websites.html">
+            <button class="contentButton">
+                Websites
+            </button>
+        </a>
+        <a href="tshirts.html">
+            <button class="contentButton">
+                T-Shirts
+            </button>
+        </a>
+        <a href="music.html">
+            <button class="contentButton">
+                Music
+            </button>
+        </a>
+        <a href="games.html">
+            <button class="contentButton">
+                Video Games
+            </button>
+        </a>
+    </section>
 </body>
 </html>
