--- a/music.html
+++ b/music.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Music</title>
 </head>
 <body>
+    <header>
+        <h1 class="nonMainHeading">Thomas Manning</h1>
+        <nav>
+            <ul class="nav-bar">
+                <li><a class="otherPage" href="index.html">Home</a></li>
+                <li><a class="otherPage" href="about.html">About</a></li>
+                <li><a class="otherPage" href="contact.html">Contact</a></li>
+                <li><a class="currentPage" href="content.html">Content</a></li>
+            </ul>
+        </nav>
+    </header>
+    <h2 class="contentTypeHeading">
+        Music
+    </h2>
     
 </body>
 </html>
