--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Home Page</title>
 </head>
 <body>
-    
+    <h1 id="mainPageHeading">Thomas Manning</h1>
+    <a href="about.html">
+        <button class="mainButton">
+            About
+        </button>
+    </a>
+    <a href="content.html">
+        <button class="mainButton">
+            Content
+        </button>
+    </a>
+    <a href="contact.html">
+        <button class="mainButton">
+        Contact
+        </button>
+    </a>
 </body>
-</html>l
+</html>
