--- a/games.html
+++ b/games.html
@@ -22,6 +22,8 @@
     <h2 class="contentTypeHeading">
         Video Games
     </h2>
-    
+    <p>
+        This section is currently empty, but there are plans for the future!
+    </p>
 </body>
 </html>
