--- a/tshirts.html
+++ b/tshirts.html
@@ -22,6 +22,8 @@
     <h2 class="contentTypeHeading">
         T-Shirts
     </h2>
-    
+    <img src="longing.jpg" class="tshirtDesign" alt="Longing t-shirt design">
+    <img src="romney.jpg" class="tshirtDesign" alt="Mitt Romney t-shirt design">
+    <img src="happy.jpg" class="tshirtDesign" alt="'I haven't been happy since 2012' t-shirt design">
 </body>
 </html>
