--- a/websites.html
+++ b/websites.html
@@ -22,6 +22,25 @@
     <h2 class="contentTypeHeading">
         Websites
     </h2>
-    
+    <a href="https://friendly-lichterman-da1a7e.netlify.app/">
+        <button class="contentButton">
+            Card
+        </button>
+    </a>
+    <a href="https://flamboyant-brown-d17f8a.netlify.app/">
+        <button class="contentButton">
+            Blog
+        </button>
+    </a>
+    <a href="https://elastic-archimedes-b9c33b.netlify.app/">
+        <button class="contentButton">
+            Soundboard
+        </button>
+    </a>
+    <a href="https://hungry-elion-71587a.netlify.app/">
+        <button class="contentButton">
+            Test Site
+        </button>
+    </a>
 </body>
 </html>
