fixed error with html validation

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
         </ul>
     </nav>
     </header>
-        <h3>About Thomas</h3>
-    <section class="aboutMessage">
+    <h3>About Thomas</h3>
+    <div class="aboutMessage">
         <div class="aboutText">
         <p id="m1">Thomas Manning is a Senior at Michigan State University studying Information Science. Raised in southeast Michigan, he has been working with computers 
             since adolescence. As a student, Thomas' main focuses are on UX design and research on artificial inteligence and machine learning.
@@ -37,6 +37,6 @@
         </p> 
         </div>
         <img src="me2.jpg" class="imageMe2" alt="An image of Thomas Manning in front of a barn">
-    </section>
+    </div>
 </body>
 </html>
