--- a/content.html
+++ b/content.html
@@ -21,31 +21,11 @@
     </header>
     <section>
         <h3>Thomas' Content</h3>
-        <a href="videos.html">
-            <button class="contentButton">
-                Videos
-            </button>
-        </a>
-        <a href="websites.html">
-            <button class="contentButton">
-                Websites
-            </button>
-        </a>
-        <a href="tshirts.html">
-            <button class="contentButton">
-                T-Shirts
-            </button>
-        </a>
-        <a href="music.html">
-            <button class="contentButton">
-                Music
-            </button>
-        </a>
-        <a href="games.html">
-            <button class="contentButton">
-                Video Games
-            </button>
-        </a>
+        <a href="videos.html" class="contentButton">Videos</a>
+        <a href="websites.html" class="contentButton">Websites</a>
+        <a href="tshirts.html" class="contentButton">T-Shirts</a>
+        <a href="music.html" class="contentButton">Music</a>
+        <a href="games.html" class="contentButton">Video Games</a>
     </section>
 </body>
 </html>
