--- a/index.html
+++ b/index.html
@@ -9,20 +9,8 @@
 </head>
 <body>
     <h1 id="mainPageHeading">Thomas Manning</h1>
-    <a href="about.html">
-        <button class="mainButton">
-            About
-        </button>
-    </a>
-    <a href="content.html">
-        <button class="mainButton">
-            Content
-        </button>
-    </a>
-    <a href="contact.html">
-        <button class="mainButton">
-        Contact
-        </button>
-    </a>
+    <a href="about.html" class="mainButton">About</a>
+    <a href="content.html" class="mainButton">Content</a>
+    <a href="contact.html" class="mainButton">Contact</a>
 </body>
 </html>
