--- a/music.html
+++ b/music.html
@@ -23,22 +23,8 @@
         Music
     </h2>
 
-    <a href="https://www.youtube.com/watch?v=StdP4paIt4U">
-    <button class="contentButton">
-        Crab Cannon
-    </button>
-    </a>
-
-    <a href="https://soundcloud.com/eardispenser/the-ronald-mcdonald-shoes-midi-demo">
-        <button class="contentButton">
-            Ronald McDonald 
-        </button>
-    </a>
-    
-        <a href="https://soundcloud.com/eardispenser/ecruteak-city-theme-wind-quintet-midi">
-            <button class="contentButton">
-                Ecruteak
-            </button>
-        </a>
+    <a href="https://www.youtube.com/watch?v=StdP4paIt4U" class="contentButton">Crab Cannon</a>
+    <a href="https://soundcloud.com/eardispenser/the-ronald-mcdonald-shoes-midi-demo" class="contentButton">Ronald McDonald</a>
+    <a href="https://soundcloud.com/eardispenser/ecruteak-city-theme-wind-quintet-midi" class="contentButton">Ecruteak</a>
 </body>
 </html>
