--- a/videos.html
+++ b/videos.html
@@ -22,27 +22,9 @@
     <h2 class="contentTypeHeading">
         Videos
     </h2>
-    <a href="https://youtu.be/o4qManJ5MCw">
-        <button class="contentButton">
-            Music Video
-        </button>
-    </a>
-    <a href="https://youtu.be/mov4Ypnoqic">
-        <button class="contentButton">
-            Mini Documentary
-        </button>
-    </a>
-    <a href="https://youtu.be/R3ZYBR93yLE">
-        <button class="contentButton">
-            Personal Trailer
-        </button>
-    </a>
-    <a href="https://youtu.be/bZIYQE6NJ0o">
-        <button class="contentButton">
-            Covid Schooling
-        </button>
-    </a>
-    
-    
+    <a href="https://youtu.be/o4qManJ5MCw" class="contentButton">Music Video</a>
+    <a href="https://youtu.be/mov4Ypnoqic" class="contentButton">Mini Documentary</a>
+    <a href="https://youtu.be/R3ZYBR93yLE" class="contentButton">Personal Trailer</a>
+    <a href="https://youtu.be/bZIYQE6NJ0o" class="contentButton">Covid Schooling</a>
 </body>
 </html>
